# mono_image_numbers

./: Cargo.toml
src/: lib.rs
