[package]
name = "mono_image_numbers"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_iterator = { git = "https://github.com/mmmpa/bit_iterator" }
itertools = "0.9.0"
